--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div class="note">
        <div class="note_content">
          <p>My Lovee(Leah),<br/>
-           Iloveyousooomuchhh sorry kung ngayon lang ulit makakapag gawa ng<br>website ah?<br> nasira kasi sv ko<br> buo naman na ngayon so<br> mabibigyan ulit kita<br>ng gifts like <br>this 
+           Iloveyousooomuchhh sorry kung ngayon lang ulit makakapag gawa ng<br>website ah?<br> nasira kasi sv ko<br> buo naman na ngayon so<br> mabibigyan ulit kita<br>ng gifts like <br>this<br> sorry din kanina sa nasabi ko<br> i love you love² mwa 
       </div>
     </div>
     </body>
